fixed IZ#165326: IllegalArgumentException: offset is out of file length